--- a/f/fe/fet/fetchfido.co.uk.html
+++ b/f/fe/fet/fetchfido.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fetchfido.co.uk privacy policy that was archived on 2008-11-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081116193853id_/http%3A//www.fetchfido.co.uk/home/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fetchfido.co.uk privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616183301id_/http%3A//www.fetchfido.co.uk/home/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privicy Policy</title>
@@ -64,12 +64,16 @@ function popupMessage() {
         additional purposes for which we receive your prior consent. We do not 
         share any information you provide us with anyone outside of Fetchfido. 
       </p>
-      <p>We use outside ad companies to display ads on our site. These ads may 
-        contain cookies but they cannot connect or identify a specific person 
-        with the content of a cookie. They do not build profiles, the cookies 
-        are completely anonymous. Fetchfido has no access to information collected 
-        in this way.</p>
-      <p>The site fully agrees and complies to <a href="http://www.ftc.gov/bcp/conline/pubs/buspubs/coppa.htm">COPPA</a> 
+      
+<p>We use third-party advertising companies to serve ads when you visit our website. 
+These companies may use information (not including your name, address, email address, 
+or telephone number) about your visits to this and other websites in order to 
+provide advertisements about goods and services of interest to you. Fetchfido 
+has no access to information collected in this way.</p>
+<p> If you would like more information about this practice and to know your choices 
+about not having this information used by these companies, <a href="http://www.networkadvertising.org/">click 
+here</a>.</p>
+<p>The site fully agrees and complies to <a href="http://www.ftc.gov/bcp/conline/pubs/buspubs/coppa.htm">COPPA</a> 
         rules.<br>
       </p>
       <p>Fetchfido contains links to other sites, Fetchfido is not responsible 
