--- a/j/ju/jun/junta42.com.html
+++ b/j/ju/jun/junta42.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the junta42.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216081016id_/http%3A//www.junta42.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the junta42.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616183805id_/http%3A//www.junta42.com/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,18 +9,22 @@
 <body class="no_right">
 <div id="Wrapper">
   <div id="Header" class="clearfix">
-    <div id="Top_nav">
-    	<ul>
-        	<li><a href="/invite/">Invite a Friend</a></li>
-            <li><a href="/contribute/">Submit a Story</a></li>
-            <li><a href="/">Home</a></li>
-        </ul>
-    </div>
-    <a href="/" id="Logo"><img src="/elements/logo.gif" alt="Junta42" name="logo" width="244" height="111" border="0"></a>
-    <div id="AdBox"><a href="/ads.asp?url=/match/&amp;image=/uploads/ads/J42M_home_ad.gif"><img src="/uploads/ads/J42M_home_ad.gif" alt="Match 1" width="246" height="129" border="0"></a></div>
-     <div id="Tagline">
-    	<strong>Find Everything Content Marketing &amp; <br> Custom Publishing to Grow Your Business</strong>
-    </div>
+		<div id="Top_nav">
+    		<ul>
+        		<li><a href="/invite/">Invite a Friend</a></li>
+				<li><a href="/contribute/">Submit a Story</a></li>
+				<li><a href="/">Home</a></li>
+			</ul>
+		</div>
+		<div class="logoHere">
+			<a href="/" id="Logo"><img src="/elements/logo.gif" alt="Junta42" name="logo" width="329" height="111" border="0"></a>
+			 <h1 id="Tagline">The go-to site for content marketing and custom publishing.</h1>
+		</div>
+		<div class="navLinksHere"><a href="http://www.junta42.com/match/"><img src="/elements/linkFindPub.gif" width="100" height="71" alt="Find a Publisher"></a><a href="http://www.junta42.com/about/"><img src="/elements/linkAbout.gif" width="60" height="71" alt="About Junta42"></a><a href="http://www.junta42.com/resources/Are_You_Ready_for_the_Content_Revolution_Video_Junta42_Part_1/"><img src="/elements/linkVideo.gif" width="55" height="71" alt="Video"></a><a href="http://blog.junta42.com/" target="_blank" id="blog"><img src="/elements/linkBlog.gif" width="47" height="71" alt="Newsletter"></a><a href="http://www.junta42.com/subscribe.asp"><img src="/elements/linkNewsletter.gif" width="92" height="71" alt="Conact Us"></a></div>
+		<!--include file="banner_ad.asp" -->
+		<div style="float:left; width:265px; text-align:right"><a href="/match/signup.asp"><img src="/match/4200/callout_findMatch.png" width="192" height="126" alt="Find a Custom Publisher"></a></div>
+
+
 	<div id="Search_Box">
         <ul class="tabs left">
             <li class="selected"><a href="/">Junta42</a></li>
@@ -87,7 +91,7 @@
 <li><a href="/category/PR_New_Rules/">PR New Rules</a></li>
 <li><a href="/category/Print_Magazines/">Print Magazines</a></li>
 <li><a href="/category/Research/">Research</a></li>
-<li><a href="/category/ROI-Measurement/">ROI-Measurement</a></li>
+<li><a href="/category/ROI_Measurement/">ROI-Measurement</a></li>
 <li><a href="/category/SEO_SEM/">SEO/SEM</a></li>
 <li><a href="/category/Social_Media/">Social Media</a></li>
 <li><a href="/category/Video/">Video</a></li>
@@ -96,7 +100,7 @@
 <li><a href="/category/Web_Usability/">Web Usability</a></li>
 <li><a href="/category/Webcasts_Virtual_Events/">Webcasts/Virtual Events</a></li>
 </ul>
-<!--Elapsed Time: 0 | Updated On: 12/16/2008 12:00:27 AM -->
+<!--Elapsed Time: 0 | Updated On: 6/16/2009 1:00:02 PM -->
             </div>
         </div>
      </div>
@@ -117,7 +121,7 @@
 				<td width="26%"><a href="/match/"><img src="/elements/home/ad_provider.gif" alt="Find your perfect content provider in 5 minutes" width="233" height="88" /></a></span></td>
 		</tr>
 		</table>
-   	 </div>-->	
+   	 </div>-->
  	 <div style="clear:both; height:6px">&nbsp;</div>
 
     <div id="Left">
@@ -144,7 +148,7 @@
     </ul>
   </div>
   <div id="Footer">
-      © 2008 <a href="http://www.zsquaredmedia.com/" target="_blank">Z Squared Media, LLC</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/about/usage/">Site Usage</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/about/privacy/">Privacy Policy</a>
+      © 2009 <a href="http://www.zsquaredmedia.com/" target="_blank">Z Squared Media, LLC</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/about/usage/">Site Usage</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/about/privacy/">Privacy Policy</a>
   </div>
 </div>
 
