--- a/s/st/sty/stylehive.com.html
+++ b/s/st/sty/stylehive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stylehive.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217030720id_/http%3A//blog.stylehive.com/index.php/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stylehive.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616183909id_/http%3A//blog.stylehive.com/index.php/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
   <title>Stylehive - Privacy Policy</title>
@@ -62,45 +62,51 @@
 
 <h2>Privacy Policy</h2>
 <p>
-We care about your privacy, and we value the trust you place in us.&nbsp; This Privacy Policy describes what information we may collect from you through the Stylehive website and related services, and how we may use that information.&nbsp; References to “we,” “us,” and “our” refer to Stylehive, Inc.
+We care about your privacy, and we value the trust you place in us.&nbsp; This Privacy Policy describes what personal information we may collect from you through the StyleHive website and related services (the “Service”), and how we may use that information.&nbsp; References to “we,” “us,” and “our” refer to Stylehive, Inc. 
 </p>
 <p>
 <b>Personal Information We Collect</b>
 </p>
 <p>
-When you register with us, we collect the personal information you submit to us.&nbsp; This information may include your name, mailing addresses, email address, IM address, phone number, credit card information, and other information.&nbsp; You can alter or update the personal information you submit to us by logging into your account and changing your account information.&nbsp; If you update information, we may keep a copy of the prior version for our records.
-</p>
-<p>
-We also use “cookies” on this site.&nbsp; Cookies are small computer files we place on your computer’s hard drive so we can recognize your computer and collect information such as your Internet protocol (IP) address, login, password, your browsing patterns on our site, and other information regarding your computer and your use of our site.&nbsp; We may use an outside ad server company to display advertisements on this site, in which case the ad server company and the advertisements on this site may also use cookies.&nbsp; The Help portion of the toolbar on most browsers will tell you how to restrict cookies or disable them altogether.&nbsp; However, restricting or disabling cookies may prevent you from using some of the features of this site.
+When you register with us and use the Service, we collect the personal information you submit to us.&nbsp; This information may include your name, mailing addresses, email address, IM address, phone number and other personal information.&nbsp; You can alter or update the personal information you submit to us by logging into your account and changing your information.&nbsp; If you update information, we may keep a copy of the prior version for our records. 
+<br>
+We also use “cookies” on this site.&nbsp; Cookies are small computer files we place on your computer’s hard drive so we can recognize your computer and collect information such as your Internet protocol (IP) address, login, password, your browsing patterns on our site, and other information regarding your computer and your use of our site.&nbsp; We may use an outside ad server company to display advertisements on this site, in which case the ad server company and the advertisements on this site may also use cookies.&nbsp; The Help portion of the toolbar on most browsers will tell you how to restrict cookies or disable them altogether. However, restricting or disabling cookies may prevent you from using some of the features of this site.&nbsp; Third parties who advertise on the Service may also use cookies in connection with their advertisements on the Service.&nbsp; This privacy policy covers the use of cookies by Stylehive, Inc. and does not cover the use of cookies or other tracking technologies by any of its advertisers. 
 </p>
 <p>
 <b>Our Use and Sharing of Your Personal Information</b>
 </p>
 <p>
-We may use the information we collect on this site to customize and improve your online experience, and to improve this site and our business.&nbsp; We may also send you news, updates and other information you may find useful, unless you specify in your account that you do not want to receive these notices.
+All content you submit to the Service, including all content in your Member Profile, other than your email address and password, is visible to the public.&nbsp; If you wish to keep this information private, you must not include it in your Member Profile.&nbsp; Your member name will always be visible to the public.&nbsp; In some cases, you can mark content as private by clicking the “Private” checkbox when submitting content.&nbsp; It is your responsibility to ensure that content you submit which is not meant for public display is marked as private. 
+</p>
+<p>
+We may use the information we collect on this site to provide the Service, to customize and improve your online experience, and to improve the Service.&nbsp; We may also send you news, updates and other information you may find useful, unless you specify in your account that you do not want to receive these notices. 
 </p>
 <p>
 <b>Except as described below, we do not share with third parties information by which you can be personally identified.</b>
 </p>
-<ul><li>We may release personal information when we believe release is appropriate for any of the following purposes:&nbsp; to comply with the law or a request by law enforcement officials or judicial authorities; to enforce or apply our Terms of Use and other agreements; or to protect the rights, property, or safety of Stylehive, Inc., our customers or others.&nbsp; This does not include selling, renting, sharing, or otherwise disclosing personally identifiable information from customers for commercial purposes.
-</li><li>In the event that all or part of our business is sold or pledged as security, we may transfer the information we collect on this site to third parties in connection with that transaction.
-</li><li>Finally, we may share with third parties information that does not personally identify you (such as your age, or the manner in which you use our site.)  By using this type of general data, we can improve our site by learning what type of people are most likely to visit us and how they use our site.</li></ul>
+<ul>
+<li>We may release personal information when we believe release is appropriate for any of the following purposes: to comply with the law or a request by law enforcement officials or judicial authorities; to enforce or apply our Terms of Use and other agreements; or to protect the rights, property, or safety of Stylehive, Inc., our customers or others.&nbsp; This does not include selling, renting, sharing, or otherwise disclosing personally identifiable information from customers for commercial purposes.</li>
+<li>In the event that all or part of our business is sold or pledged as security, we may transfer the information we collect on this site to third parties in connection with that transaction.</li>
+<li>In connection with its partnerships with other fashion websites and other third parties, Stylehive may share content with such third parties and allow them to publish such content, including content you submit to the Service that is visible to the public.</li>
+</ul>
 <p>
 <b>Security</b>
-<br>
-We use industry standard security measures to protect the loss, misuse and alteration of the information under our control.&nbsp; While there is no such thing as “perfect security” on the Internet, we will take all reasonable steps to insure the safety of your personal information.
 </p>
 <p>
-<b>Children</b>
-<br>
-Because we do not intentionally collect information from anyone under the age of 13, no one under 13 years of age is authorized to use the Stylehive website or services.
+We use industry standard security measures to protect the loss, misuse and alteration of the information under our control.&nbsp; While there is no such thing as “perfect security” on the Internet, we will take all reasonable steps to insure the safety of your personal information. 
 </p>
 <p>
-<b>General</b>
+<b>Children </b>
 <br>
-If you choose to visit Stylehive.com, your visit and any dispute over privacy is subject to this Privacy Policy and our <a href="http://blog.stylehive.com/index.php/termsofuse" title="Terms of Use">Terms of Use</a> including limitations on liability and application of the law of the United States and the state of California.&nbsp; This Privacy Policy is subject to change at any time.&nbsp; Any changes will be set forth on this page.
+Because we do not intentionally collect information from anyone under the age of 13, no one under 13 years of age is authorized to use the Service. 
+</p>
+<p>
+<b>General </b>
 <br>
-
+If you choose to use the Service, your visit and any dispute over privacy is subject to this Privacy Policy and our <a href="http://blog.stylehive.com/index.php/termsofuse" title="Terms of Use">Terms of Use</a> including limitations on liability and application of the law of the United States and the State of California.&nbsp; This Privacy Policy is subject to change at any time.&nbsp; Any changes will be set forth on this page.
+</p>
+<p>
+<em>Updated 1/23/2009</em>
 </p>
    
       
@@ -138,10 +144,10 @@ If you choose to visit Stylehive.com, your visit and any dispute over privacy is
 
 <p class="spacer">From the Stylehive Blog</p>
 
-<a title="Permalink" href="http://blog.stylehive.com/index.php/weblog/entry/top-ten-best-gifts-under-50-for-the-gal-that-has-everything/">Top Ten Best Gifts Under $50 For The Gal That Has Everything!</a><br>
+<a title="Permalink" href="http://blog.stylehive.com/index.php/weblog/entry/something-for-the-dad-with-everything/">Father’s Day Gifts For The Dad Who Has Everything</a><br>
 <div class="clear"></div>
-<p class="small"></p><p>So I’ve scoured the net in search of the best gifts under $50 for the gal that truly has everything. We all know one – the girl that doesn’t need…<br>
-<a title="Permalink" href="http://blog.stylehive.com/index.php/weblog/entry/top-ten-best-gifts-under-50-for-the-gal-that-has-everything/" class="blogpost">» Read the blog post</a></p>
+<p class="small"></p><p>If buying my mom a good Mother’s Day gift was challenging, buying a <a href="http://www.stylehive.com/tag/fathers%20day" title="Father's Day">Father’s Day</a> gift is nearly impossible! Already, there is a sharp decrease in the…<br>
+<a title="Permalink" href="http://blog.stylehive.com/index.php/weblog/entry/something-for-the-dad-with-everything/" class="blogpost">» Read the blog post</a></p>
 
 
 </div>				
