--- a/s/sa/saf/safestyle-windows.co.uk.html
+++ b/s/sa/saf/safestyle-windows.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the safestyle-windows.co.uk privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216161706id_/http%3A//safestyle-windows.co.uk/privacy/index.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the safestyle-windows.co.uk privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616184957id_/http%3A//www.safestyle-windows.co.uk/privacy/index.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy</title>
@@ -18,11 +18,6 @@
 <!--[if IE]>
 <link href="/css/iefixes.css" media="screen" title="Default Style" rel="stylesheet" />
 <![endif]-->
-<meta name="Author" content="www.bloommedia.co.uk">
-<meta name="Website" content="client website address">
-<meta name="Copyright" content="Copyright">
-<meta name="description" content="Site description">
-<meta name="keywords" content="keywords">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
 
@@ -82,6 +77,27 @@ function checksearch()
 }
 </script>
 
+<link rel="stylesheet" href="http://www.safestyle-windows.co.uk/all.css" type="text/css" media="all">
+<link rel="stylesheet" href="http://www.safestyle-windows.co.uk/sIFR-screen.css" type="text/css" media="screen">
+<link rel="stylesheet" href="http://www.safestyle-windows.co.uk/sIFR-print.css" type="text/css" media="print">
+<script src="http://www.safestyle-windows.co.uk/sifr.js" type="text/javascript"></script>
+<script src="http://www.safestyle-windows.co.uk/sifr-addons.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+//<![CDATA[
+/* Replacement calls. Please see documentation for more information. */
+
+if(typeof sIFR == "function"){
+
+// This is the preferred "named argument" syntax
+	sIFR.replaceElement(named({sSelector:"body h1", sFlashSrc:"/ssukh1.swf", sColor:"#A22538;", wmode: "transparent",sLinkColor:"#A22538", sHoverColor:"#A22538", nPaddingTop:0, nPaddingBottom:0, sFlashVars:"textalign=left&offsetTop=0"}));
+
+
+
+};
+
+//]]>
+</script>
 </head>
 <body>
 
@@ -138,9 +154,11 @@ function checksearch()
                   <img src="/images/whitear.png" alt="" width="5" height="9" border="0" class="whitear">Coloured 
                   Glass</a> <a href="/products/obscureglass.htm" class="subbut2"> <img src="/images/whitear.png" alt="" width="5" height="9" border="0" class="whitear">Obscure Glass</a> <a href="/products/profilecolours.htm" class="subbut2"> <img src="/images/whitear.png" alt="" width="5" height="9" border="0" class="whitear">Profile Colours</a> 
                   <a href="/doors/" class="but2text">Doors</a>
+				  <a href="/composite-doors/" class="but2text">Composite doors</a>
 				  <a href="/frenchpatiodoors/" class="but2text">French &amp; Patio doors</a> 
-				  <a href="/visualiser/" class="but2text">Window Visualiser</a> </div>              </td>
-              <td width="420" rowspan="2" valign="top" class="col2b"> <img src="/images/privacy.gif" alt="Privacy Statement" width="151" height="24"> 
+				  <a href="/visualiser/" class="but2text">Window Visualiser</a> 
+					<a href="/door-viewer.htm" class="but2text">Door Viewer</a> </div>              </td>
+              <td width="420" rowspan="2" valign="top" class="col2b"><h1 style="margin:0px;padding:0px;font-weight:normal;font-size:21px; text-align:left;">Our Privacy Policy</h1> 
                 <div class="line" style="margin-bottom:8px;"></div>
 
                 <div class="mainbodytext"> 
@@ -253,18 +271,18 @@ function checksearch()
   </div>
   
  
-  <div class="rightbox" style="background:url(/images/rightback2.gif) left bottom no-repeat;margin-top:1px;1px;text-decoration:none; cursor:pointer; color:#A22538;" onclick="JavaScript:window.location.replace('/customercare/customerservice_testimonials.htm')"> 
+  <div class="rightbox" style="background:url(/images/rightback2.gif) left bottom no-repeat;margin-top:1px;1px;text-decoration:none; cursor:pointer; color:#A22538;" onclick="JavaScript:window.location.replace('http://customer-reviews.safestyle-windows.co.uk/')"> 
     <div class="boxtext2">See what our customers are saying</div>
 
-    <div style="margin-top:1px;margin-left:5px;display:block;"><a href="/customercare/customerservice_testimonials.htm"><img src="/images/readnow.png" alt="Read Now" width="100" height="47" border="0"></a></div>
+    <div style="margin-top:1px;margin-left:5px;display:block;"><a href="http://customer-reviews.safestyle-windows.co.uk/"><img src="/images/readnow.png" alt="Read Now" width="100" height="47" border="0"></a></div>
   </div>
 
    <br>
 	  <a href="http://www.safestyle-windows.co.uk/aboutus/aboutus_standards.htm" name=""><img src="/images/energy-saving-recommended-safestyle.jpg" alt="Safestyle - Energy Saving Recommended" width="100" height="102" border="0" style="margin-top:0px;margin-left:13px; margin-bottom:5px;"></a>
 	  
-  <a href="/aboutus/aboutus_trustmark.htm"><img src="/images/trusrt2.gif" alt="TRUSTMARK" width="100" height="47" border="0" style="margin-top:4px;margin-left:5px;"></a> 
-  <a href="/aboutus/aboutus_fensa.htm"><img src="/images/fensa.gif" alt="FENSA" width="56" height="35" border="0" style="margin-top:4px;"></a> 
-  <a href="/aboutus/aboutus_ggf.htm"><img src="/images/ggf.gif" alt="GGF" width="62" height="35" border="0" style="margin-top:4px;"></a> 
+  <a href="/aboutus/aboutus_trustmark.htm"><img src="/images/trustmark-safestyle-products-service.gif" alt="Trustmark endorsed Safestyle products and service" width="100" height="47" border="0" style="margin-top:0px;margin-left:13px; margin-bottom:5px;"></a>
+	<a href="/aboutus/aboutus_fensa.htm"><img src="/images/fensa-safestyle-windows-and-doors.gif" alt="FENSA compliant Safestyle windows and doors installers" width="56" height="35" border="0" style="margin-top:4px; margin-left:8px;"></a><a href="/aboutus/aboutus_ggf.htm"><img src="/images/ggf-safestyle-double-glazing-providers.gif" alt="GGF members Safestyle double glazing providers" width="62" height="35" border="0" style="margin-top:4px;"></a>
+ <div align="center"><a href="http://www.safestyle-windows.co.uk/act-on-co2.htm"><img src="/images/act-on-co2-safestyle.jpg" alt="ACT ON CO2 in association with Safestyle UK" width="42" height="30" border="0" style="margin-top:10px; margin-bottom:5px;" align="middle"></a></div> 
    <p style="margin-top:50px;"><!-- START CONTROLSCAN CODE -->
 <a href="http://www.controlscan.com/seal/verify2.php?subid=3690&amp;id=94" target="verify"><img border="0" src="http://www.controlscan.com/seal/sealx2.php?subid=3690&amp;id=94" oncontextmenu="alert('Copying Prohibited by Law - Trademark of ControlScan.com'); return false;" alt="Internet Security By ControlScan"></a>
 <!-- STOP CONTROLSCAN CODE --></p>
@@ -301,7 +319,7 @@ function checksearch()
 <!--FOOTER CODE--><table align="center" cellpadding="0" cellspacing="0">
   <tbody><tr><td>
 <div class="footerlink">
- <a href="http://www.safestyle-windows.co.uk/">Double Glazing</a>
+ <a href="/double-glazing.htm">Double Glazing</a>
  | <a href="/doors/">UPVC Doors</a>
  | <a href="/frenchpatiodoors/">uPVC French and Patio Doors</a>
  | <a href="/products/">UPVC Windows and Doors</a>
@@ -309,62 +327,19 @@ function checksearch()
  | <a href="/products/windows.htm">Replacement Windows</a>
  | <a href="http://customer-reviews.safestyle-windows.co.uk/">Customer Reviews</a>
  <br>
- <a href="/jobs/">Jobs and Opportunities</a>
- | <a href="/aboutus/">About Us</a>
- | <a href="/faq/">FAQs</a>
+  <a href="/jobs/">Jobs and Opportunities</a>
+ | <a href="http://www.safestyle-manufacturing.co.uk">Safestyle Manufacturing</a>
  | <a href="http://www.safestyleblog.co.uk/">Safestyle Blog</a>
 </div>
 </td></tr>
-</tbody></table><!-- START OF SmartSource Data Collector TAG -->
-<!-- Copyright (c) 1996-2008 WebTrends Inc.  All rights reserved. -->
-<!-- Version: 8.5.0 -->
-<!-- Tag Builder Version: 2.0.0  -->
-<!-- Created: 8/11/2008 3:06:24 PM -->
-<script src="/javascript/webtrends.js" type="text/javascript"></script>
-
-<!-- Warning: The two script blocks below must remain inline. Moving them to an external -->
-<!-- JavaScript include file can cause serious problems with cross-domain tracking.      -->
-
-<script type="text/javascript">
-//<![CDATA[
-var _tag=new WebTrends();
-_tag.dcsGetId();
-//]]>>
-</script><script type="text/javascript" src="https://statse.webtrendslive.com/dcseprg6d00000gsstl9hrwcr_8v2x/wtid.js"></script>
-<script type="text/javascript">
-//<![CDATA[
-// Add custom parameters here.
-//_tag.DCSext.param_name=param_value;
-_tag.dcsCollect();
-//]]>>
-</script>
-<script src="//rd.clickshift.com/js/convert.js" type="text/javascript"></script>
-<script src="/javascript/dynamicsearch.js" type="text/javascript"></script>
-<noscript>
-<div><img alt="DCSIMG" id="DCSIMG" width="1" height="1" src="http://statse.webtrendslive.com/dcseprg6d00000gsstl9hrwcr_8v2x/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.5.0" ></div>
-</noscript>
-<!-- END OF SmartSource Data Collector TAG -->
-
-
-
-
-
-
+</tbody></table><script type="text/javascript" src="/javascript/NaturalSearchPlugin_Safestyle.js"></script>
 
 <script language="javascript" type="text/javascript">
-WM_initialize();// seach box watermark text 
-
-
-
+WM_initialize();// search box watermark text 
 </script>
 
 <script type="text/javascript" language="javascript" src="/javascript/searchbox.js"></script>
-
-
-
-<!-- 
--->
-
+<!--  -->
 
 <!--END WEBSIDESTORY CODE-->
 
