--- a/b/bi/big/bigtitmovieclub.com.html
+++ b/b/bi/big/bigtitmovieclub.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bigtitmovieclub.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216014645id_/http%3A//bigtitmovieclub.com/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bigtitmovieclub.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616185650id_/http%3A//bigtitmovieclub.com/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -13,7 +13,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
+
 <link href="/css/c_css.css" rel="stylesheet" type="text/css">
+
 
 <script src="/js/lib.js" type="text/javascript"></script>
 </head>
@@ -31,10 +33,10 @@
  </div>
  
  <div class="infobox">
- <h2 class="one">2,096 <span>DVDs</span></h2>
- <h2 class="two">8695.13 <span>GB</span></h2>
- <script language="JavaScript" type="text/javascript">var secondsToUpdate = 11594; /var hideText = true;*/</script>
- <script language="JavaScript" type="text/javascript" src="/js/countdown.js"></script> <p>New DVD in <span class="countdown">3:13:13</span></p>
+ <h2 class="one">2,402 <span>DVDs</span></h2>
+ <h2 class="two">10205.57 <span>GB</span></h2>
+ <script language="JavaScript" type="text/javascript">var secondsToUpdate = 10990; /var hideText = true;*/</script>
+ <script language="JavaScript" type="text/javascript" src="/js/countdown.js"></script> <p>New DVD in <span class="countdown">3:03:09</span></p>
  </div>
  
   
@@ -56,6 +58,7 @@
 
 	<div class="content">
 	
+
 	  
 		<div class="mainbox" id="faq">
 
@@ -92,7 +95,7 @@
 					<p>To protect your privacy and security, we will also take reasonable steps to verify your identity before granting access or making corrections.</p>
 
 					<p><strong class="color">How To Contact Us: </strong><br>
-					Should you have other questions or concerns about these privacy policies, please call us at [+61 422132100] or send us an email at [<a href="mailto:support@hdmovieclub.com">support@hdmovieclub.com</a>].</p>
+					Should you have other questions or concerns about these privacy policies, please  send us an email at [<a href="mailto:support@hdmovieclub.com">support@hdmovieclub.com</a>].</p>
 
 				</div>
 
@@ -105,50 +108,50 @@
  <div class="netframe">
  <img src="http://i.hdmovieclub.com/images/bigtitmovieclub.com/images/sidebox-bonus.jpg" alt="bonus" class="bonus"> <ul>
  <li>
- <a href="http://analmovieclub.com/dvds"><img class="left" src="/images/sites/analmovieclub.jpg" alt="Anal Movie Club">Anal Movie Club</a>
+ <a href="http://analmovieclub.com/dvds?nats=NTEwODoyOjc"><img class="left" src="/images/sites/analmovieclub.jpg" alt="Anal Movie Club">Anal Movie Club</a>
  </li><li>
- <a href="http://asianmovievault.com/dvds"><img class="left" src="/images/sites/asianmovievault.jpg" alt="Asian Movie Vault">Asian Movie Vault</a>
+ <a href="http://asianmovievault.com/dvds?nats=NTEwODoyOjg"><img class="left" src="/images/sites/asianmovievault.jpg" alt="Asian Movie Vault">Asian Movie Vault</a>
  </li><li>
- <a href="http://bigbuttmovieclub.com/dvds"><img class="left" src="/images/sites/bigbuttmovieclub.jpg" alt="Big Butt Movie Club">Big Butt Movie Club</a>
+ <a href="http://bigbuttmovieclub.com/dvds?nats=NTEwODoyOjk"><img class="left" src="/images/sites/bigbuttmovieclub.jpg" alt="Big Butt Movie Club">Big Butt Movie Club</a>
  </li><li>
- <a href="http://cummovieclub.com/dvds"><img class="left" src="/images/sites/cummovieclub.jpg" alt="Cum Movie Club">Cum Movie Club</a>
+ <a href="http://cummovieclub.com/dvds?nats=NTEwODoyOjEx"><img class="left" src="/images/sites/cummovieclub.jpg" alt="Cum Movie Club">Cum Movie Club</a>
  </li><li>
- <a href="http://dpmovieclub.com/dvds"><img class="left" src="/images/sites/dpmovieclub.jpg" alt="DP Movie Club">DP Movie Club</a>
+ <a href="http://dpmovieclub.com/dvds?nats=NTEwODoyOjEz"><img class="left" src="/images/sites/dpmovieclub.jpg" alt="DP Movie Club">DP Movie Club</a>
  </li><li>
- <a href="http://deepthroatmovieclub.com/dvds"><img class="left" src="/images/sites/deepthroatmovieclub.jpg" alt="Deepthroat Movie Club">Deepthroat Movie Club</a>
+ <a href="http://deepthroatmovieclub.com/dvds?nats=NTEwODoyOjEy"><img class="left" src="/images/sites/deepthroatmovieclub.jpg" alt="Deepthroat Movie Club">Deepthroat Movie Club</a>
  </li><li>
- <a href="http://ebonymovievault.com/dvds"><img class="left" src="/images/sites/ebonymovievault.jpg" alt="Ebony Movie Vault">Ebony Movie Vault</a>
+ <a href="http://ebonymovievault.com/dvds?nats=NTEwODoyOjE0"><img class="left" src="/images/sites/ebonymovievault.jpg" alt="Ebony Movie Vault">Ebony Movie Vault</a>
  </li><li>
- <a href="http://fetishmovievault.com/dvds"><img class="left" src="/images/sites/fetishmovievault.jpg" alt="Fetish Movie Vault">Fetish Movie Vault</a>
+ <a href="http://fetishmovievault.com/dvds?nats=NTEwODoyOjE1"><img class="left" src="/images/sites/fetishmovievault.jpg" alt="Fetish Movie Vault">Fetish Movie Vault</a>
  </li><li>
- <a href="http://gangbangmovieclub.com/dvds"><img class="left" src="/images/sites/gangbangmovieclub.jpg" alt="Gang Bang Movie Club">Gang Bang Movie Club</a>
+ <a href="http://gangbangmovieclub.com/dvds?nats=NTEwODoyOjE2"><img class="left" src="/images/sites/gangbangmovieclub.jpg" alt="Gang Bang Movie Club">Gang Bang Movie Club</a>
  </li><li>
- <a href="http://gonzomovieclub.com/dvds"><img class="left" src="/images/sites/gonzomovieclub.jpg" alt="Gonzo Movie Club">Gonzo Movie Club</a>
+ <a href="http://gonzomovieclub.com/dvds?nats=NTEwODoyOjE3"><img class="left" src="/images/sites/gonzomovieclub.jpg" alt="Gonzo Movie Club">Gonzo Movie Club</a>
  </li><li>
- <a href="http://internalmovieclub.com/dvds"><img class="left" src="/images/sites/internalmovieclub.jpg" alt="Internal Movie Club">Internal Movie Club</a>
+ <a href="http://internalmovieclub.com/dvds?nats=NTEwODoyOjE4"><img class="left" src="/images/sites/internalmovieclub.jpg" alt="Internal Movie Club">Internal Movie Club</a>
  </li><li>
- <a href="http://interracialmovievault.com/dvds"><img class="left" src="/images/sites/interracialmovievault.jpg" alt="Interracial Movie Vault">Interracial Movie Vault</a>
+ <a href="http://interracialmovievault.com/dvds?nats=NTEwODoyOjE5"><img class="left" src="/images/sites/interracialmovievault.jpg" alt="Interracial Movie Vault">Interracial Movie Vault</a>
  </li><li>
- <a href="http://latinamovieclub.com/dvds"><img class="left" src="/images/sites/latinamovieclub.jpg" alt="Latina Movie Club">Latina Movie Club</a>
+ <a href="http://latinamovieclub.com/dvds?nats=NTEwODoyOjIw"><img class="left" src="/images/sites/latinamovieclub.jpg" alt="Latina Movie Club">Latina Movie Club</a>
  </li><li>
- <a href="http://lesbiandvdclub.com/dvds"><img class="left" src="/images/sites/lesbiandvdclub.jpg" alt="Lesbian DVD Club">Lesbian DVD Club</a>
+ <a href="http://lesbiandvdclub.com/dvds?nats=NTEwODoyOjIx"><img class="left" src="/images/sites/lesbiandvdclub.jpg" alt="Lesbian DVD Club">Lesbian DVD Club</a>
  </li><li>
- <a href="http://milfmovieclub.com/dvds"><img class="left" src="/images/sites/milfmovieclub.jpg" alt="MILF Movie Club">MILF Movie Club</a>
+ <a href="http://milfmovieclub.com/dvds?nats=NTEwODoyOjIy"><img class="left" src="/images/sites/milfmovieclub.jpg" alt="MILF Movie Club">MILF Movie Club</a>
  </li><li>
- <a href="http://povmovieclub.com/dvds"><img class="left" src="/images/sites/povmovieclub.jpg" alt="POV Movie Club">POV Movie Club</a>
+ <a href="http://povmovieclub.com/dvds?nats=NTEwODoyOjIz"><img class="left" src="/images/sites/povmovieclub.jpg" alt="POV Movie Club">POV Movie Club</a>
  </li><li>
- <a href="http://shemaledvdclub.com/dvds"><img class="left" src="/images/sites/shemaledvdclub.jpg" alt="Shemale DVD Club">Shemale DVD Club</a>
+ <a href="http://shemaledvdclub.com/dvds?nats=NTEwODoyOjI0"><img class="left" src="/images/sites/shemaledvdclub.jpg" alt="Shemale DVD Club">Shemale DVD Club</a>
  </li><li>
- <a href="http://squirtingmovieclub.com/dvds"><img class="left" src="/images/sites/squirtingmovieclub.jpg" alt="Squirting Movie Club">Squirting Movie Club</a>
+ <a href="http://squirtingmovieclub.com/dvds?nats=NTEwODoyOjI1"><img class="left" src="/images/sites/squirtingmovieclub.jpg" alt="Squirting Movie Club">Squirting Movie Club</a>
  </li><li>
- <a href="http://teendvdclub.com/dvds"><img class="left" src="/images/sites/teendvdclub.jpg" alt="Teen DVD Club">Teen DVD Club</a>
+ <a href="http://teendvdclub.com/dvds?nats=NTEwODoyOjI2"><img class="left" src="/images/sites/teendvdclub.jpg" alt="Teen DVD Club">Teen DVD Club</a>
  </li> </ul> </div>
  
   
  <img class="title" src="http://i.hdmovieclub.com/images/bigtitmovieclub.com/images/sidebox-title02.gif" alt="Movie of the day">
  <div class="box movieday">
- <a href="/dvd/big-fucking-titties-5"><img src="http://i.hdmovieclub.com/movies/acidrain/bigfuckingtitties5/bigfuckingtitties5_front_m.jpg" alt="Big Fucking Titties 5"></a>
- <h4><a href="/dvd/big-fucking-titties-5">Big Fucking Titties 5</a></h4>
+ <a href="/dvd/meet-the-twins-9"><img src="http://dl.hdmovieclub.com/u/movies/heavenlysins/meetthetwins9/meetthetwins9_front_m.jpg" alt="Meet the Twins 9"></a>
+ <h4><a href="/dvd/meet-the-twins-9">Meet the Twins 9</a></h4>
  <div></div>
  <div>DVD Rating: unrated</div>
  <div>Downloads: </div>
@@ -197,7 +200,9 @@
  <span> | </span>
  <a href="http://nats.movieprofits.com/track/NDIyOjk6Ng/">Webmasters</a>
  <span> | </span>
- <a href="http://www.billingsupport.com">Epoch/PaycomEU Support</a>
+ <a href="http://www.reviewporn.com/straight/boobs/big-tit-movie-club" target="_blank">Big Tit Movie Club Review</a>
+ <span> | </span>
+ <a href="http://www.epoch.com/billingsupport">Epoch/PaycomEU Support</a>
  <span> | </span>
  <a href="mailto:support@bigtitmovieclub.com">Email Us</a>
  </div><br>
@@ -208,7 +213,6 @@
  Customer Service Number: (866) 774 1311</span>
  <div class="clear over1"></div>
  </div>
-
 </div>
 
 
